@@ -4,19 +4,23 @@ import org.jvalue.ods.adapterservice.importer.HttpImporter;
 import org.jvalue.ods.adapterservice.importer.Importer;
 import org.jvalue.ods.adapterservice.interpreter.Interpreter;
 import org.jvalue.ods.adapterservice.interpreter.JsonInterpreter;
+import org.jvalue.ods.adapterservice.interpreter.XmlInterpreter;
 import org.jvalue.ods.adapterservice.model.AdapterConfig;
 
-import java.util.Collections;
 import java.util.Map;
+
+import static java.util.Map.entry;
 
 public class AdapterManager {
 
-    private static final Map<String, Importer> importers = Collections.singletonMap(
-            "HTTP", new HttpImporter()
+    private static final Map<String, Importer> importers = Map.ofEntries(
+            entry("HTTP", new HttpImporter())
     );
-    private static final Map<String, Interpreter> interpreters = Collections.singletonMap(
-            "JSON", new JsonInterpreter()
+    private static final Map<String, Interpreter> interpreters = Map.ofEntries(
+            entry("JSON", new JsonInterpreter()),
+            entry("XML", new XmlInterpreter())
     );
+
 
     public static Adapter getAdapter(AdapterConfig config) {
         Importer importer = importers.get(config.protocol);
